# chronos

./: .dockerignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
api-server/: CMakeLists.txt  README.md
api-server/include/chronos/api/handlers/: context.hpp  health_handlers.hpp  job_handlers.hpp  metrics_handlers.hpp  schedule_handlers.hpp
api-server/include/chronos/api/http/: router.hpp  server.hpp  types.hpp
api-server/include/chronos/api/middleware/: auth_middleware.hpp  request_id_middleware.hpp
api-server/include/chronos/api/observability/: logger.hpp
api-server/include/chronos/api/validation/: job_validation.hpp
api-server/src/: main.cpp
api-server/src/handlers/: health_handlers.cpp  job_handlers.cpp  metrics_handlers.cpp  schedule_handlers.cpp  vigil_integration_handlers.cpp
api-server/src/http/: router.cpp  server.cpp
api-server/src/middleware/: auth_middleware.cpp  request_id_middleware.cpp
api-server/src/observability/: logger.cpp
api-server/src/validation/: job_validation.cpp
docker/: Dockerfile.api-server  Dockerfile.scheduler  Dockerfile.worker
docs/architecture/: 07-phase2-api-single-node-scheduler.md  09-phase4-rabbitmq-reliable-dispatch.md  11-phase6-distributed-scheduler-leader-election.md  13-phase8-observability-operability.md  14-phase9-containerization-orchestration-scale.md
docs/integrations/: vigil-chronos-phase3-basic-testing-report.md
k8s/: README.md
k8s/api/: deployment.yaml  service.yaml
k8s/autoscaling/: worker-hpa.yaml
k8s/base/: namespace.yaml
k8s/infrastructure/: etcd.yaml  rabbitmq.yaml  redis.yaml  stateful-postgres.yaml
k8s/policies/: pdb-api.yaml  pdb-scheduler.yaml  pdb-worker.yaml
k8s/scheduler/: deployment.yaml
k8s/worker/: deployment.yaml
ops/: README.md
ops/observability/: compose-observability.yml
ops/observability/alerts/: chronos-alerts.yml
ops/observability/elastic/filebeat/: filebeat.yml
ops/observability/grafana/dashboards/: chronos-overview.json
ops/observability/prometheus/: prometheus.yml
ops/runbooks/: observability-operability.md
scheduler/: CMakeLists.txt  README.md
scheduler/include/chronos/scheduler/core/: scheduler_loop.hpp  scheduler_runtime.hpp
scheduler/include/chronos/scheduler/executor/: local_executor.hpp
scheduler/include/chronos/scheduler/leader/: fencing_guard.hpp  lease_election.hpp
scheduler/include/chronos/scheduler/messaging/: rabbitmq_publisher.hpp
scheduler/include/chronos/scheduler/metrics/: metrics.hpp
scheduler/include/chronos/scheduler/observability/: logger.hpp
scheduler/include/chronos/scheduler/reconciliation/: reconciliation_job.hpp
scheduler/include/chronos/scheduler/scheduling/: duplicate_guard.hpp  misfire_policy.hpp  schedule_calculator.hpp
scheduler/src/: main.cpp
scheduler/src/core/: scheduler_loop.cpp  scheduler_runtime.cpp
scheduler/src/executor/: local_executor.cpp
scheduler/src/leader/: fencing_guard.cpp  lease_election.cpp
scheduler/src/messaging/: rabbitmq_publisher.cpp
scheduler/src/metrics/: metrics.cpp
scheduler/src/observability/: logger.cpp
scheduler/src/reconciliation/: reconciliation_job.cpp
scheduler/src/scheduling/: duplicate_guard.cpp  misfire_policy.cpp  schedule_calculator.cpp
scripts/scale-tests/: bottleneck-checklist.md  load-generator.sh  run-compose-scale.sh
shared-core/: CMakeLists.txt
shared-core/include/chronos/messaging/: in_memory_queue_broker.hpp  message_codec.hpp  queue_broker.hpp
shared-core/include/chronos/persistence/in_memory/: in_memory_repositories.hpp
shared-core/src/messaging/: in_memory_queue_broker.cpp  message_codec.cpp
shared-core/src/persistence/in_memory/: in_memory_repositories.cpp
tests/: README.md
tests/leader-failover/: README.md  leader_failover_tests.cpp
worker/: CMakeLists.txt  README.md
worker/include/chronos/worker/messaging/: rabbitmq_consumer.hpp
worker/src/: main.cpp
worker/src/messaging/: rabbitmq_consumer.cpp
worker/src/observability/: logger.cpp
worker/src/runtime/: worker_runtime.cpp
